include_directories(.)
include_directories(devILx64/include)

add_subdirectory(TFE_Archive)
link_directories(TFE_Archive)

add_subdirectory(TFE_Asset)
link_directories(TFE_Asset)

# add_subdirectory(TFE_Audio)
# add_subdirectory(TFE_DarkForces)
# add_subdirectory(TFE_Editor)
# add_subdirectory(TFE_FileSystem)
# add_subdirectory(TFE_ForceScript)
# add_subdirectory(TFE_FrontEndUI)
# add_subdirectory(TFE_Game)
# add_subdirectory(TFE_Input)
# add_subdirectory(TFE_Jedi)
# add_subdirectory(TFE_Memory)
# add_subdirectory(TFE_Outlaws)
# add_subdirectory(TFE_Polygon)
# add_subdirectory(TFE_PostProcess)
# add_subdirectory(TFE_RenderBackend)
# add_subdirectory(TFE_RenderShared)
# add_subdirectory(TFE_Settings)
# add_subdirectory(TFE_System)
# add_subdirectory(TFE_Ui)
# add_subdirectory(UI_Images)
# add_subdirectory(UI_Text)
